# freedv-gui

./: .clang-tidy  .gitignore  .travis.yml  .wenv.json  51-disable-suspension.lua  CHANGELOG_OLD.md  CMakeLists.txt  CODE_SIGNING.md  COPYING  README.md  README.osx  README.txt  RELEASE_NOTES.txt  USER_MANUAL.html  USER_MANUAL.md  USER_MANUAL.txt  add_debug_entitlement.h  build_linux.sh  build_macos_sound_drivers.sh  build_osx.sh  build_osx_macports.sh  build_signed_windows_release.sh  build_ubuntu.sh  build_windows.sh  build_windows_old.sh  check-for-zeros.py  codec2-rt-heap.patch  configure_speexdsp_osx.sh  configure_speexdsp_osx_universal.sh  delocating.py.patched  diff  fargan_config.h.in  fargan_config_integ.h.in  freedv-ctest-fullduplex.conf  freedv-ctest.conf  freedv-llvm-aarch64.cmake  generate-univ-pkgs.sh  hamlib-windows.patch  portaudio-macos.patch  radae_demo_rx.py  (+7 more)
contrib/: CMakeLists.txt  freedv.desktop  freedv.rc  freedv.rc.in  launch_linux_rade.py
contrib/auth/: readme.md
freedv-dev/: CMakeLists.txt  COPYING  README.osx  README.txt  USER_MANUAL.txt  credits.txt
freedv-dev/cmake/: BuildCodec2.cmake  BuildHamlib.cmake  BuildPortaudio.cmake  BuildSamplerate.cmake  BuildSndfile.cmake  BuildSox.cmake  BuildSpeex.cmake  BuildWxWidgets.cmake  GetDependencies.cmake.in  MinGW.cmake  config.h.in  version.h.in
freedv-dev/contrib/: freedv.desktop
freedv-dev/debian/: changelog  control  docs  rules
freedv-dev/script/: spot.sh
freedv-dev/src/: CMakeLists.txt  Makefile.win32  afreedvplugin.c  dlg_audiooptions.cpp  dlg_audiooptions.h  dlg_filter.cpp  dlg_filter.h  dlg_options.cpp  dlg_options.h  dlg_plugin.cpp  dlg_plugin.h  dlg_ptt.cpp  dlg_ptt.h  fdmdv2_defines.h  fdmdv2_main.cpp  fdmdv2_main.h  fdmdv2_pa_wrapper.cpp  fdmdv2_pa_wrapper.h  fdmdv2_plot.h  fdmdv2_plot_scalar.cpp  fdmdv2_plot_scalar.h  fdmdv2_plot_scatter.cpp  fdmdv2_plot_scatter.h  fdmdv2_plot_spectrum.cpp  fdmdv2_plot_spectrum.h  fdmdv2_plot_waterfall.cpp  fdmdv2_plot_waterfall.h  hamlib.cpp  hamlib.h  serialport.cpp  serialport.h  sox_biquad.c  topFrame.cpp  topFrame.h
src/: CMakeLists.txt  DecibelSliderAccessible.cpp  DecibelSliderAccessible.h  afreedvplugin.c  callsign_encoder.cpp  callsign_encoder.h  codec2_interface.cpp  comp.h  defines.h  dlg_audiooptions.cpp  dlg_audiooptions.h  dlg_easy_setup.cpp  dlg_easy_setup.h  dlg_filter.cpp  dlg_filter.h  dlg_options.cpp  dlg_options.h  dlg_plugin.cpp  dlg_plugin.h  dlg_ptt.cpp  dlg_ptt.h  entitlements.plist  eq.cpp  fdmdv2_defines.h  fdmdv2_main.cpp  fdmdv2_main.h  fdmdv2_pa_wrapper.cpp  fdmdv2_pa_wrapper.h  fdmdv2_plot.cpp  fdmdv2_plot.h  fdmdv2_plot_scalar.cpp  fdmdv2_plot_scatter.cpp  fdmdv2_plot_scatter.h  fdmdv2_plot_spectrum.cpp  fdmdv2_plot_spectrum.h  fdmdv2_plot_waterfall.cpp  fdmdv2_plot_waterfall.h  freedv.icns  freedv_interface.cpp  freedv_interface.h  (+39 more)
src/audio/: AudioDeviceSpecification.cpp  AudioDeviceSpecification.h  AudioEngineFactory.cpp  AudioEngineFactory.h  CMakeLists.txt  IAudioDevice.cpp  IAudioDevice.h  IAudioEngine.cpp  IAudioEngine.h  MacAudioDevice.cpp  MacAudioDevice.h  MacAudioDevice.mm  MacAudioEngine.cpp  MacAudioEngine.h  PortAudioDevice.cpp  PortAudioDevice.h  PortAudioEngine.cpp  PortAudioEngine.h  PortAudioInterface.cpp  PortAudioInterface.h  PulseAudioDevice.cpp  PulseAudioDevice.h  PulseAudioEngine.cpp  PulseAudioEngine.h  WASAPIAudioDevice.cpp  WASAPIAudioDevice.h  WASAPIAudioEngine.cpp  WASAPIAudioEngine.h  WASPIAudioEngine.cpp  WASPIAudioEngine.h  rtkit.c  rtkit.h
src/config/: AudioConfiguration.cpp  AudioConfiguration.h  CMakeLists.txt  ConfigurationDataElement.h  FilterConfiguration.cpp  FilterConfiguration.h  FreeDVConfiguration.cpp  FreeDVConfiguration.h  ReportingConfiguration.cpp  ReportingConfiguration.h  RigControlConfiguration.cpp  RigControlConfiguration.h  WxWidgetsConfigStore.cpp  WxWidgetsConfigStore.h
src/flex/: CMakeLists.txt  Dockerfile  FlexKeyValueParser.cpp  FlexKeyValueParser.h  FlexRealtimeHelper.cpp  FlexRealtimeHelper.h  FlexTcpTask.cpp  FlexTcpTask.h  FlexTxRxThread.cpp  FlexTxRxThread.h  FlexVitaTask.cpp  FlexVitaTask.h  README.md  ReportingController.cpp  ReportingController.h  flex_defines.h  main.cpp  vita.h
src/gui/: CMakeLists.txt
src/integrations/: CMakeLists.txt  LICENSE  README.md
src/logging/: CMakeLists.txt  ILogger.h  WSJTXNetworkLogger.cpp  WSJTXNetworkLogger.h
src/os/: CMakeLists.txt  macos_autoupdate.mm  no_autoupdate.cpp  os_interface.h  osx_interface.mm  osx_stubs.cpp  windows_autoupdate.cpp  windows_interface.cpp
src/pipeline/: AgcStep.cpp  AgcStep.h  AudioPipeline.cpp  AudioPipeline.h  BandwidthExpandStep.cpp  BandwidthExpandStep.h  BeepStep.cpp  BeepStep.h  CMakeLists.txt  ComputeRfSpectrumStep.cpp  ComputeRfSpectrumStep.h  DebugRecordStep.cpp  DebugRecordStep.h  EitherOrStep.cpp  EitherOrStep.h  EqualizerStep.cpp  EqualizerStep.h  ExclusiveAccessStep.cpp  ExclusiveAccessStep.h  ExternVocoderStep.cpp  ExternVocoderStep.h  FreeDVAuthStep.cpp  FreeDVAuthStep.h  FreeDVReceiveStep.cpp  FreeDVReceiveStep.h  FreeDVTransmitStep.cpp  FreeDVTransmitStep.h  IPipelineStep.cpp  IPipelineStep.h  LevelAdjustStep.cpp  LevelAdjustStep.h  LinkStep.cpp  LinkStep.h  MixStep.cpp  MixStep.h  MuteStep.cpp  MuteStep.h  ParallelStep.cpp  ParallelStep.h  PlaybackStep.cpp  (+31 more)
src/reporting/: CMakeLists.txt  CsvReporter.cpp  CsvReporter.h  FreeDVReporter.cpp  FreeDVReporter.h  FreeDVReporter_dummy.cpp  IReporter.h  UdpReporter.cpp  UdpReporter.h  pskreporter.cpp  pskreporter.h
src/rig_control/: CMakeLists.txt  HamlibRigController.cpp  HamlibRigController.h  IRigController.h  IRigFrequencyController.h  IRigPttController.h  SerialPortInRigController.cpp  SerialPortInRigController.h  SerialPortOutRigController.cpp  SerialPortOutRigController.h  SerialPortRigController.cpp  SerialPortRigController.h
src/sox/: .clang-tidy  CMakeLists.txt  biquad.c  biquad.h  effects.c  effects.h  formats.c  formats.h  formats_i.c  libsox.c  sox.h  sox_i.h  vol.c  xmalloc.h
src/util/: CMakeLists.txt  EventHandler.h  GenericFIFO.h  IRealtimeHelper.h  Semaphore.cpp  Semaphore.h  SocketIoClient.cpp  (+20 more)
(+448 files in other folders)
